bug fixes - fixed bug: null value for post id in plugin/theme editor - fixed bug: secondary scrollbar

--- a/src/hesh.less
+++ b/src/hesh.less
@@ -381,3 +381,7 @@
 	margin: 1px !important;
 }
 
+.CodeMirror-vscrollbar{
+	display: none; // prevent second scrollbar
+}
+
